[package]
name = "frogger"
version = "0.1.0"
edition = "2021"
description = "A Frogger clone in Rust using raylib"
license = "Apache-2.0"
authors = ["ha1tch <h@ual.fi>"]
repository = "https://github.com/ha1tch/frogger-rs"

[dependencies]
raylib = "5.0"
rand = "0.8"

[profile.small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
